Updated the slo_rules_topic and created a new metric_list_topic which will accept new SLO definitions and the list of upper and lower bounds per monitoring metric respectively. Created two endpoints required to instantiate a new Detector Subcomponent, named new-application-slo and new-application-metric-list respectively which retrieve any new SLO to be considered by the SLOViD or the metric list containing the upper and lower bounds of the individual metrics to be monitored Simplification of DetectorSubcomponent and RealtimeMonitoringAttribute classes by removing unecessary code Introduction of lower and upper bounds in the RealtimeMonitoringAttribute class Miscellaneous code style improvements
Change-Id: I114c94bb625023dfef7afac26d7581de6b7b3e00